Adapt datastore client to use versioned routes (#1328)
* Adapt datastore client to use versioned routes

* refresh test cassettes

* format

* adapt one test to newer wk test db

* do not use datastore token as dataset sharing token

* Update cassettes.

* format and lint.

* changelog

* remove merge artifacts in changelog

* implement pr feedback: do not pass api version from concrete to abstract client; remove debug curl call in test setup

* Add version to manualy built routes.

---------

Co-authored-by: markbader <markbader64@gmail.com>

--- a/webknossos/tests/cassettes/test_api_client/test_build_info.yml
+++ b/webknossos/tests/cassettes/test_api_client/test_build_info.yml
@@ -18,19 +18,17 @@ http_interactions:
       status:
         code: 200
       headers:
-        x-powered-by: Express
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         access-control-max-age: '600'
         access-control-allow-origin: '*'
         x-permitted-cross-domain-policies: master-only
-        date: Tue, 15 Apr 2025 13:07:47 GMT
-        connection: close
+        date: Thu, 03 Jul 2025 19:19:54 GMT
         content-type: application/json
-        content-length: '409'
+        content-length: '426'
       body:
         encoding: utf8
         data: >-
-          {"webknossos":{"name":"webknossos","ciTag":"","commitHash":"920807ab93ef60ae4fd1ba6341c72989f123e13d","ciBuild":"","scalaVersion":"2.13.16","version":"dev","sbtVersion":"1.10.11","datastoreApiVersion":"2.0","commitDate":"Tue
-          Apr 15 13:27:44 2025
-          +0200"},"schemaVersion":130,"httpApiVersioning":{"currentApiVersion":9,"oldestSupportedApiVersion":5},"localDataStoreEnabled":true,"localTracingStoreEnabled":true}
+          {"webknossos":{"name":"webknossos","ciTag":"","commitHash":"f907b5377a89c9ba0f90246741cc8f4c5f521966","ciBuild":"16048991892","scalaVersion":"2.13.16","version":"16048991892","sbtVersion":"1.11.0","datastoreApiVersion":"2.0","commitDate":"Thu
+          Jul 3 13:18:06 2025
+          +0200"},"schemaVersion":135,"httpApiVersioning":{"currentApiVersion":9,"oldestSupportedApiVersion":5},"localDataStoreEnabled":true,"localTracingStoreEnabled":true}
         compression: none
