--- a/cluster_tools/pyproject.toml
+++ b/cluster_tools/pyproject.toml
@@ -25,6 +25,7 @@ dev-dependencies = [
     "icecream ~=2.1.1",
     "mypy ~=1.15.0",
     "pytest ~=8.3.3",
+    "pytest-timeout>=2.4.0",
     "ruff ~=0.11.0",
 ]
 
