--- a/cluster_tools/pyproject.toml
+++ b/cluster_tools/pyproject.toml
@@ -17,7 +17,7 @@ Changelog = "https://github.com/scalableminds/webknossos-libs/blob/master/cluste
 
 
 [project.optional-dependencies]
-kubernetes = ["distributed ~=2023.9.1"]
+kubernetes = ["kubernetes ~=27.2.0"]
 all=["cluster_tools[kubernetes]"]
 
 [tool.uv]
