Make slurm job canceling more robust (#1317)
* Make slurm job canceling more robust, by killing all remaining jobs after a short wait time

* [Debug] Log times for scancel handling

* Fix signal handling for cluster executors which stopped working if multiple executors were instantiated in the same process before.

* First stop the file wait thread before canceling the jobs to avoid checking the job state after canceling which will log lots of errors for jobs that were canceled before running, because they don't turn up in the slurm accounting

* Cleanup

* Properly mock (and restore) env variables

* Update changelog

* Add f-string

* Exempt completing jobs when checking whether cancellation worked fast enough

* Test whether monkeypatching works

* add time logs to find out where job cancellation time is spent

* Fix setting sigterm_wait_in_s to 0 during tests

* Improve slurm cancellation test to assert that original sigint handler was called

* Format

* Fix typing

* Fix nonlocal variable access

* Add test for signal handling regression when multiple executors are instantiated

* Garbage collect after first executor ran to provoke regression

* Apply some PR feedback

* Delete executor1 in test to provoke bug

* Add pytest-timeout to avoid hanging tests and wait for futures in test

* Cleanup and fix hanging tests

* Add comment

* Remove pytest-timeout dependency again

* Restore uv.lock

* When shutting down cluster executor and wait if False, treat as if executor was killed

* Decrease SIGTERM_WAIT_IN_S for new test and assert that shutdown hooks are cleaned up

* Format

* Remove dask executor from cluster tools

* Linting

* Update changelog

* Actually deregister shutdown hook and use with statements to ensure executor shutdown

* Also update webknossos uv.lock

* Add pytest-timeout

* Unify the two variables tracking executor shutdown

* Fix kubernetes dependency

* Assert that no jobs run before the tests

* Add debug logging

* Fix signal handling te

--- a/cluster_tools/pyproject.toml
+++ b/cluster_tools/pyproject.toml
@@ -17,8 +17,8 @@ Changelog = "https://github.com/scalableminds/webknossos-libs/blob/master/cluste
 
 
 [project.optional-dependencies]
-kubernetes = ["distributed ~=2023.9.1"]
-dask = ["kubernetes ~=27.2.0"]
+dask = ["distributed ~=2023.9.1"]
+kubernetes = ["kubernetes ~=27.2.0"]
 all=["cluster_tools[kubernetes]", "cluster_tools[dask]"]
 
 [tool.uv]
@@ -26,6 +26,7 @@ dev-dependencies = [
     "icecream ~=2.1.1",
     "mypy ~=1.15.0",
     "pytest ~=8.3.3",
+    "pytest-timeout>=2.4.0",
     "ruff ~=0.11.0",
 ]
 
