fix typos with codespell

--- a/.codespellrc
+++ b/.codespellrc
@@ -3,4 +3,4 @@
 skip = *.lock,./webknossos/tests/cassettes,./webknossos/tests/dataset/cassettes,./webknossos/webknossos/dataset/_utils/vendor
 # some names and camelCased variables etc
 ignore-regex = \b([a-z]+[A-Z][a-zA-Z]*)\b
-ignore-words-list = nd,ND
+ignore-words-list = nd,ND,lod,LOD
