ignore generated python code in ruff

--- a/webknossos/pyproject.toml
+++ b/webknossos/pyproject.toml
@@ -146,6 +146,7 @@ exclude = [
     "site-packages",
     "venv",
     "webknossos/dataset/_utils/vendor",
+    "webknossos/proofreading/agglomerate_graph_pb2.py",
 ]
 
 # Same as Black.
